streamlining docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,42 +4,33 @@ version: '3'
 services:
   zookeeper:
     extends:
-      file: ./kafka_cluster/kafka_cluster.yml
+      file: ./kafka_cluster/docker-compose.yml
       service: zookeeper
   # -----------------------      
   broker:
     extends:
-      file: ./kafka_cluster/kafka_cluster.yml
+      file: ./kafka_cluster/docker-compose.yml
       service: broker
     depends_on:
       - zookeeper
   # -----------------------     
   create_topic:
+    extends:
+      file: ./create_topic/docker-compose.yml
+      service: create_topic
     depends_on:
       - broker
-    network_mode: host
-    build:
-      context: ./create_topic
-      dockerfile: Dockerfile
-    image: create_new_topic:latest
-    container_name: create_new_topic
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
+    container_name: create_topic_test
     environment:
       - TOPIC=test
-      - BOOTSTRAP_SERVER=host.docker.internal:9092
-  # # -----------------------     
+  # -----------------------     
   device_1:
+    extends:
+      file: ./iot_data_gen/docker-compose.yml
+      service: iot_data_gen
     depends_on:
       - create_topic
-    build:
-      context: ./iot_data_gen
-      dockerfile: Dockerfile
-    image: iot_data_gen:latest
     container_name: device_1
-    network_mode: host
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
     command:
       [
         "--device_struct",
