change host.docker.internal to localhost

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,5 +38,5 @@ services:
         "--topic",
         "test",
         "--bootstrap_server",
-        "host.docker.internal:9092"
+        "localhost:9092"
       ]
