--- a/create_topic/docker-compose.yml
+++ b/create_topic/docker-compose.yml
@@ -10,8 +10,6 @@ services:
       dockerfile: Dockerfile
     image: create_topic:latest
     container_name: default
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
     environment:
       - TOPIC=default
-      - BOOTSTRAP_SERVER=host.docker.internal:9092
+      - BOOTSTRAP_SERVER=localhost:9092
