--- a/consumer/Dockerfile
+++ b/consumer/Dockerfile
@@ -1,13 +1,13 @@
 FROM python:3.11-slim
 
-RUN apt-get update && apt-get install -y default-jdk
-ENV JAVA_HOME /usr/lib/jvm/default-jdk
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    openjdk-11-jdk \
+    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
 COPY pyspark_consumer.py .
 
-RUN python -m pip install pyspark confluent kafka
+RUN python -m pip install pyspark
 
-ENV PYSPARK_SUBMIT_ARGS="--packages org.apache.spark:spark-sql-kafka-0-10_2.12:3.2.0 pyspark-shell"
-CMD ["spark-submit", "pyspark_consumer.py"]
+CMD ["spark-submit", "--packages", "org.apache.spark:spark-sql-kafka-0-10_2.12:3.4.0", "pyspark_consumer.py"]
