--- a/consumer/pyspark_console/Dockerfile
+++ b/consumer/pyspark_console/Dockerfile
@@ -10,4 +10,4 @@ COPY main.py .
 
 RUN python -m pip install pyspark
 
-CMD ["spark-submit", "--packages", "org.apache.spark:spark-sql-kafka-0-10_2.12:3.4.0", "pyspark_consumer.py"]
+CMD ["spark-submit", "--packages", "org.apache.spark:spark-sql-kafka-0-10_2.12:3.4.0", "main.py"]
